<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageViewDBS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            app:srcCompat="@drawable/dbs"
            android:contentDescription="@string/imgdbs_description"
            tools:ignore="NestedWeights" />

        <TextView
            android:id="@+id/textViewDBS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/DisplayTextdbs"
            android:textColor="@color/black"
            android:layout_gravity="center_vertical"
            android:textSize="50sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageViewOCBC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            app:srcCompat="@drawable/ocbc"
            android:contentDescription="@string/imgocbc_description"
            tools:ignore="NestedWeights" />

        <TextView
            android:id="@+id/textViewOCBC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/DisplayTextocbc"
            android:textColor="@color/black"
            android:layout_gravity="center_vertical"
            android:textSize="50sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageViewUOB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            app:srcCompat="@drawable/uob"
            android:contentDescription="@string/imguob_description"
            tools:ignore="NestedWeights" />

        <TextView
            android:id="@+id/textViewUOB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/DisplayTextuob"
            android:textColor="@color/black"
            android:layout_gravity="center_vertical"
            android:textSize="50sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>
